[package]
name = "nimiq-fuzz"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Fuzz some `Deserialize` implementations"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
afl = { version = "0.15.11", optional = true }

nimiq-account = { workspace = true }
nimiq-bls = { workspace = true }
nimiq-collections = { workspace = true }
nimiq-keys = { workspace = true }
nimiq-primitives = { workspace = true, features = ["key-nibbles", "serde-derive", "trie"] }
nimiq-serde = { workspace = true }
nimiq-transaction = { workspace = true }

[features]
fuzz = ["afl"]
